--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influence Gear</title>
+    <!-- stylesheets -->
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+    <!-- header start -->
+    <header>
+        <nav>
+
+        </nav>
+    </header>
+
+    <!-- banner container -->
+    <section class="banner-container">
+
+    </section>
+    <!-- credential banner -->
+    <section class="credential-container">
+
+    </section>
+    <!-- collection container -->
+    <section class="collection-container">
+
+    </section>
+    <!-- join container -->
+    <section class="join-container">
+
+    </section>
+    <!-- footer container -->
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
